Milestones and Further Inferences

--- a/Hotel_Booking_Analysis_Team_Notebook_CapstoneProject.ipynb
+++ b/Hotel_Booking_Analysis_Team_Notebook_CapstoneProject.ipynb
@@ -8580,6 +8580,80 @@
       "metadata": {
         "id": "JE73YspdjKa-"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Conclusion**"
+      ],
+      "metadata": {
+        "id": "fWVpZA_sEx2x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Milestones\n",
+        "\n",
+        "\n",
+        "1.The best time to book a hotel is during the months from October to \n",
+        "February because during this time period the average daily rate is comparatively lower compared to other months. Additionally, guests should select room types I, L and make the bookings via Corporate, Groups and if possible use complementary channels. Further for best deals the bookings should be made for more than one guests.\n",
+        "\n",
+        "2.The optimal length of stay in order to get the best daily rate is for one day or more than seven days and for bookings with more than one guest.\n",
+        "\n",
+        "3.The highest amount of special request is received for the month of August followed by the months of July, May, June, April and so on. These request are mainly from guests coming in groups of two(mostly couples) or from those who has a baby with them. Also, the special requests are high for guests with longer stays.\n"
+      ],
+      "metadata": {
+        "id": "mvVkBEFmDdLR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Further Inferences**"
+      ],
+      "metadata": {
+        "id": "3qk8NK_UEQS2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.For each year there were more bookings for City Hotel than Resort Hotel.\n",
+        "\n",
+        "2.As bookings, Cancellation ratio was higher for City Hotel.\n",
+        "\n",
+        "3.For both the hotels “A” room type was most preferred room followed by “D”\n",
+        "\n",
+        "4.For both the hotel types, BB (Bed and Breakfast) was the most prefered meal.\n",
+        "\n",
+        "5.Non Refundable bookings are really less in Resort Hotel as compared to City Hotel.\n",
+        "\n",
+        "6.All of the customer types prefer City hotels over Resort Hotels.\n",
+        "\n",
+        "7.The most number of bookings were for 2 people and based on the number of people who come as a family for the stay, all prefer City Hotel over \n",
+        "\n",
+        "8.Resort Hotel except when the number of people is 4.\n",
+        "\n",
+        "9.Bookings got canceled 36% of the time. While booking guest did checked-in (did not cancel the booking ) almost 64% of the time.\n",
+        "10.Transient customer types have the highest cancellation percentage.\n",
+        "\n",
+        "11.Cancellation ratio is higher for the month of June followed by April and September and it is lowest for the month of January.\n",
+        "\n",
+        "12.Most of the data we have is for year 2016 and cancellation rate is ranging between 36%-39% .\n",
+        "\n",
+        "13.For 2015-September, 2016-October, 2017- May was the busiest month of the year. On overall basis busiest month of the year is August and \n",
+        "December is the most non-busiest month.\n",
+        "\n",
+        "14.Bookings which got cancelled had higher lead time.\n",
+        "\n",
+        "15.Optimal length of the stay for both hotel is 7 days.\n",
+        "\n",
+        "16.Most of the bookings were from  Portugal(PTR), Great Britain(GBR), France(FRA), Spain(ESP), Germany(DEU), Italy(ITA), Ireland(IRL), Belgium(BEL) but we can also see a higher cancellation rate of bookings from Portugal around 6% .\n"
+      ],
+      "metadata": {
+        "id": "-xO_GZlcDtxI"
+      }
     }
   ],
   "metadata": {
